--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 4.1.4
 Build-Depends:
  debhelper-compat (= 12),
  glslang-tools [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64 x32],
- meson (>= 0.45),
+ meson (>= 0.52),
  quilt (>= 0.63-8.2~),
  pkg-config,
  libdrm-dev (>= 2.4.101),
@@ -43,10 +43,9 @@ Build-Depends:
  libelf-dev [amd64 arm64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64],
  libwayland-dev (>= 1.15.0) [linux-any],
  libwayland-egl-backend-dev (>= 1.15.0) [linux-any],
- llvm-11-dev (>= 1:11.0.0~) [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64],
- libclang-11-dev (>= 1:11.0.0~) [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64],
- libclang-cpp11-dev (>= 1:11.0.0~) [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64],
- libclc-dev (>= 0.2.0+git20190827-7~) [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64],
+ llvm-7-dev (>= 1:7) [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64],
+ libclang-7-dev (>= 1:7) [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64],
+ libclc-dev (>= 0.2.0+git20180917-3) [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64],
  wayland-protocols (>= 1.9),
  zlib1g-dev,
  libglvnd-dev (>= 1.3.2),
